CREATING INTERFACE WITH TKINTER LIBRARY

--- a/Supervised Learning/ModelGUI/TkinterGUI.ipynb
+++ b/Supervised Learning/ModelGUI/TkinterGUI.ipynb
@@ -650,6 +650,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "outputs": [],
+   "source": [
+    "def values():\n",
+    "    global Pregnancies\n",
+    "    Pregnancies = int(entry1.get())\n",
+    "    global Glucose\n",
+    "    Glucose = float(entry2.get())\n",
+    "    global BloodPressure\n",
+    "    BloodPressure = float(entry3.get())\n",
+    "    global SkinThickness\n",
+    "    SkinThickness = float(entry4.get())\n",
+    "    global Insulin\n",
+    "    Insulin = float(entry5.get())\n",
+    "    global BMI\n",
+    "    BMI = float(entry6.get())\n",
+    "    global DiabetesPedigreeFunction\n",
+    "    DiabetesPedigreeFunction = float(entry7.get())\n",
+    "    global Age\n",
+    "    Age = int(entry8.get())\n",
+    "\n",
+    "    prediction_result = ('Outcome: ',model.predict([[Pregnancies,Glucose,BloodPressure,SkinThickness,Insulin,BMI,DiabetesPedigreeFunction,Age]]))\n",
+    "\n",
+    "    label_Prediction = tk.Label(root,text=prediction_result,bg='lawngreen')\n",
+    "    canvas1.create_window(200,260,window=label_Prediction)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
