CREATING INTERFACE WITH TKINTER LIBRARY

--- a/Supervised Learning/ModelGUI/TkinterGUI.ipynb
+++ b/Supervised Learning/ModelGUI/TkinterGUI.ipynb
@@ -687,6 +687,22 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
+   "source": [
+    "button1 = tk.Button(root,text='Calculate Whether Diabetes',command=values,bg='orange')\n",
+    "canvas1.create_window(200,300,window=button1)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": true
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
