CREATING INTERFACE WITH TKINTER LIBRARY

--- a/Supervised Learning/ModelGUI/TkinterGUI.ipynb
+++ b/Supervised Learning/ModelGUI/TkinterGUI.ipynb
@@ -703,6 +703,20 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
+   "source": [
+    "root.mainloop()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
