--- a/Supervised Learning/ModelGUI/TkinterGUI.ipynb
+++ b/Supervised Learning/ModelGUI/TkinterGUI.ipynb
@@ -714,6 +714,18 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "![2022-10-03.png](attachment:2022-10-03.png)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
